--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     align-items: center;
     background: var(--color-black) ;
+    border-bottom: groove 5px var(--color-golden);
     padding: 1rem 2rem;
 }
 .app__navbar-logo {
@@ -24,6 +25,7 @@
 .app__navbar-links li{
     margin: 0 1rem;
     cursor: pointer;
+    font-size: 1.3vw;
  }
 .app__navbar-links li:hover{
     color: var(--color-grey);
