--- a/src/container/Menu/MainCourseMenu.css
+++ b/src/container/Menu/MainCourseMenu.css
@@ -1,14 +1,14 @@
-.app__specialMenu {
+.app__maincourseMenu {
     flex-direction: column;
     background: var(--color-black);
 }
 
-.app__specialMenu-title {
+.app__maincourseMenu-title {
     margin-bottom: 2rem;
     text-align: center;
 }
 
-.app__specialMenu-menu {
+.app__maincourseMenu-menu {
     width: 100%;
     margin: 2rem 0;
 
@@ -18,7 +18,7 @@
     flex-direction: row;
 }
 
-.app__specialMenu-menu_heading {
+.app__maincourseMenu-menu_heading {
     font-family: var(--font-base);
     font-weight: 600;
     font-size: 45px;
@@ -27,24 +27,24 @@
     color: var(--color-white);
 }
 
-.app__specialMenu-menu_wine,
-.app__specialMenu-menu_cocktails {
+.app__maincourseMenu-menu_entrees,
+.app__maincourseMenu-menu_maincourse {
     flex: 1;
     width: 100%;
     flex-direction: column;
 }
 
-.app__specialMenu-menu_img {
+.app__maincourseMenu-menu_img {
     width: 410px;
     margin: 0 2rem;
 }
 
-.app__specialMenu-menu_img img {
+.app__maincourseMenu-menu_img img {
     width: 100%;
     height: auto;
 }
 
-.app__specialMenu_menu_items {
+.app__maincourseMenu_menu_items {
     display: flex;
     flex-direction: column;
 
@@ -53,33 +53,33 @@
 }
 
 @media screen and (min-width: 2000px) {
-    .app__specialMenu-menu_img {
+    .app__maincourseMenu-menu_img {
         width: 650px;
     }
 
-    .app__specialMenu-menu_img img {
+    .app__maincourseMenu-menu_img img {
         height: 920px;
     }
 }
 
 @media screen and (max-width: 1150px) {
-    .app__specialMenu-menu {
+    .app__maincourseMenu-menu {
         flex-direction: column;
         align-items: center;
         width: 100%;
     }
 
-    .app__specialMenu-menu_img {
+    .app__maincourseMenu-menu_img {
         margin: 3rem 0;
     }
 }
 
 @media screen and (max-width: 650px) {
-    .app__specialMenu-menu_img {
+    .app__maincourseMenu-menu_img {
         width: 100%;
     }
 
-    .app__specialMenu-menu_heading {
+    .app__maincourseMenu-menu_heading {
         font-size: 35px;
         line-height: 48.5px;
     }
